--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.mvc.servlet.path=/api
+
+jwt.expiration=86400
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web.filter=DEBUG
